--- a/index.html
+++ b/index.html
@@ -23,24 +23,44 @@
       <div class="row-fluid">
         
         <div class="span4">
-          <div class="scrollbox vertical">
+          <div id="my-scrollbox" class="scrollbox vertical small">
             <div class="scrollbox-control scrollbox-control-prev">
-              <a href="#" class="btn"><i class="icon-chevron"></i></a>
+              <button class="btn"><i class="icon-chevron"></i></button>
             </div>
             <div class="scrollbox-inner">
               <ul>
                 <li>
-                  <h3>Heading</h3>
+                  <h3>Heading 1</h3>
                   <p>Donec id elit non mi porta gravida at eget metus</p>
                 </li>
                 <li>
-                  <h3>Heading</h3>
+                  <h4>Heading 2</h4>
+                  <p>Donec id elit non mi porta gravida at eget metus</p>
+                </li>
+                <li>
+                  <h1>Heading 3</h1>
+                  <p>Donec id elit non mi porta gravida at eget metus</p>
+                </li>
+                <li>
+                  <h3>Heading 4</h3>
+                  <p>Donec id elit non mi porta gravida at eget metus</p>
+                </li>
+                <li>
+                  <h5>Heading 5</h5>
+                  <p>Donec id elit non mi porta gravida at eget metus</p>
+                </li>
+                <li>
+                  <h3>Heading 6</h3>
+                  <p>Donec id elit non mi porta gravida at eget metus</p>
+                </li>
+                <li>
+                  <h3>Heading 7</h3>
                   <p>Donec id elit non mi porta gravida at eget metus</p>
                 </li>
               </ul>
             </div>
             <div class="scrollbox-control scrollbox-control-next">
-              <a href="#" class="btn"><i class="icon-chevron"></i></a>
+              <button class="btn"><i class="icon-chevron"></i></button>
             </div>
           </div>
         </div>
@@ -52,7 +72,7 @@
        </div>
 
         <div class="span4">
-          <div id="my-scrollbox" class="scrollbox horizontal">
+          <!--div class="scrollbox horizontal">
             <div class="scrollbox-control scrollbox-control-prev">
               <a href="#" class="btn"><i class="icon-chevron-left"></i></a>
             </div>
@@ -72,7 +92,7 @@
               <a href="#" class="btn"><i class="icon-chevron-right"></i></a>
             </div>
           </div>
-        </div>
+        </div-->
 
       </div>
 
@@ -85,7 +105,7 @@
     <script src="docs/assets/js/bootstrap-scrollbox.js"></script>
     <script>
       $(function(){
-      $('#my-scrollbox').scrollbox();
+        $('#my-scrollbox').scrollbox();
       });
     </script>
   </body>
