--- a/index.html
+++ b/index.html
@@ -57,6 +57,23 @@
                   <h3>Heading 7</h3>
                   <p>Donec id elit non mi porta gravida at eget metus</p>
                 </li>
+                <li>
+                  <h3>Heading 8</h3>
+                  <p>Donec id elit non mi porta gravida at eget metus</p>
+                </li>
+                <li>
+                  <h5>Heading 9</h5>
+                  <p>Donec id elit non mi porta gravida at eget metus</p>
+                </li>
+                <li>
+                  <h3>Heading 10</h3>
+                  <p>Donec id elit non mi porta gravida at eget metus</p>
+                </li>
+                <li>
+                  <h3>Heading 11</h3>
+                  <p>Donec id elit non mi porta gravida at eget metus</p>
+                </li>
+
               </ul>
             </div>
             <div class="scrollbox-control scrollbox-control-next">
@@ -105,7 +122,11 @@
     <script src="docs/assets/js/bootstrap-scrollbox.js"></script>
     <script>
       $(function(){
-        $('#my-scrollbox').scrollbox();
+        $('#my-scrollbox').scrollbox({
+          completeAnimation: function(a) {
+            console.log('callback', a);
+          }
+        });
       });
     </script>
   </body>
