Created a new widget of scroller

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       $(function(){
         $('#my-scrollbox').scrollbox({
           completeAnimation: function(a) {
-            console.log('callback', a);
+            //console.log('callback', a);
           }
         });
       });
