djusting js and adding examples in javascriot.html

--- a/index.html
+++ b/index.html
@@ -122,11 +122,7 @@
     <script src="docs/assets/js/bootstrap-scrollbox.js"></script>
     <script>
       $(function(){
-        $('#my-scrollbox').scrollbox({
-          completeAnimation: function(a) {
-            //console.log('callback', a);
-          }
-        });
+        $('#my-scrollbox').scrollbox();
       });
     </script>
   </body>
